FIxing alignment issues for the title component

--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -139,6 +139,7 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+  width: 100%;
 }
 
 .levelText {
@@ -274,6 +275,7 @@
 
   .titleSmall {
     font-size: min(9vw, 2.5rem);
+    width: 100%;
   }
 
   .containerButtons {
